WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270662
[JSC] Do not emit jsUndefined constant
https://bugs.webkit.org/show_bug.cgi?id=270662
Summary
[JSC] Do not emit jsUndefined constant
Yusuke Suzuki
Reported
2024-03-07 14:32:00 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-03-07 14:38:45 PST
<
rdar://problem/124234204
>
Yusuke Suzuki
Comment 2
2024-03-07 14:43:16 PST
Pull request:
https://github.com/WebKit/WebKit/pull/25597
EWS
Comment 3
2024-03-07 16:37:09 PST
Committed
275813@main
(3bc33cf556e7): <
https://commits.webkit.org/275813@main
> Reviewed commits have been landed. Closing PR #25597 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug