[JSC] Do not emit jsUndefined constant https://bugs.webkit.org/show_bug.cgi?id=270662 rdar://124234204

Reviewed by Keith Miller.

We observed massive unnecessary mov due to this.

* Source/JavaScriptCore/bytecompiler/NodesCodegen.cpp:
(JSC::PropertyListNode::emitBytecode):
* Source/JavaScriptCore/llint/LLIntSlowPaths.cpp:
(JSC::LLInt::LLINT_SLOW_PATH_DECL):

Canonical link: https://commits.webkit.org/275813@main